[MOD] All forms [ADD] +1 report

--- a/TPFinalProgra/FormVisorCPU.resx
+++ b/TPFinalProgra/FormVisorCPU.resx
@@ -126,4 +126,81 @@
   <metadata name="ProcesadorTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>275, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADa2toH6+HUTuzh
+        1ZTr4tTI6+HU6urh1fvq4dX76+HU6uvi1Mjs4dWU6+HUTtra2gcAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADv388Q6+HUg+vh
+        1Ovr4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV6+vh1IPv388QAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6uLUWevi
+        1err4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1erq4tZZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/7+/BOri
+        1Zjr4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/q4tWY//+/BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/
+        vwTq4dSu6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/q4dSu//+/BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA6uLVmOvi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/q4tWYAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAOri1Fnr4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/q4tZZAAAAAAAA
+        AAAAAAAAAAAAAAAAAADv388Q6+HV6uvi1f/n3tH/n4x0/4lzWP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lz
+        WP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lzWP+Jc1j/iHNf/52Mef/n3tH/6+LV/+vi
+        1erv388QAAAAAAAAAAAAAAAAAAAAAOvh1IPr4tX/6+LV/9HFtP9/aEv/f2hL/39oS/9/aEv/f2hL/39o
+        S/9/aEv/jnle/6CNdf+gjXX/oI11/6CNdf+OeV7/f2hL/39oS/9/aEv/f2hL/39oS/95aGb/emhi/9HF
+        tP/r4tX/6+LV/+vh1IMAAAAAAAAAAAAAAADa2toH6+HU6+vi1f/r4tX/4NXH/3NhTf9pVkL/aVZC/2lW
+        Qv9pVkL/aVZC/2lWQv91Y1D/fm1c/35tXP9+bVz/fm1c/3VjUP9pVkL/aVZC/2lWQv9pVkL/aVZC/2lW
+        Qv9zYE3/39XH/+vi1f/r4tX/6+LV69ra2gcAAAAAAAAAAOvh1E7r4tX/6+LV/+vi1f/r4tX/wLSl/2NQ
+        Pv9jUD7/Y1A+/2NQPv9jUD7/Y1A+/2NQPv9jUD7/Y1A+/2NQPv9jUD7/Y1A+/2NQPv9jUD7/Y1A+/2NQ
+        Pv9jUD7/Y1A+/8Czpf/r4tX/6+LV/+vi1f/r4tX/6+HUTgAAAAAAAAAA6uHVlOvi1f/r4tX/6+LV/+vi
+        1f/r4tX/rp+M/52MeP+djHj/nYx4/52MeP+djHj/nYx4/52MeP+djHj/nYx4/52MeP+djHj/nYx4/52M
+        eP+djHj/nYx4/52MeP+tnoz/6+LV/+vi1f/r4tX/6+LV/+vi1f/s4dWUAAAAAAAAAADq4dTI6+LV/+vi
+        1f/r4tX/6+LV/+vi1f+ciXD/jXlg/5iFbv+YhW7/mIVu/5iFbv+YhW7/mIVu/5iFbv+YhW7/mIVu/5iF
+        bv+YhW7/mIVu/5iFbv+YhW7/jnlg/5uIb//r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1MgAAAAAAAAAAOvh
+        1Orr4tX/6+LV/+vi1f/r4tX/6+LV/5yJcP/KwbX/////////////////////////////////////////
+        ///////////////////////////////////Lwrb/m4hv/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+HU6gAA
+        AAAAAAAA6uHV++vi1f/r4tX/6+LV/+vi1f/r4tX/nIlw/8rBtf//////////////////////////////
+        /////////////////////////////////////////////8vCtv+biG//6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/q4dX7AAAAAAAAAADq4dX76+LV/+vi1f/r4tX/6+LV/+vi1f+ciXD/ysG1////////////////////
+        ////////////////////////////////////////////////////////y8K2/5uIb//r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+rh1fsAAAAAAAAAAOrh1Orr4tX/6+LV/+vi1f/r4tX/6+LV/5yJcP/KwbX/////////
+        ///////////////////////////////////////////////////////////////////Lwrb/m4hv/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+HU6gAAAAAAAAAA6uHUyOvi1f/r4tX/6+LV/+vi1f/r4tX/nIlw/8rB
+        tf///////////////////////////////////////////////////////////////////////////8vC
+        tv+biG//6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tTIAAAAAAAAAADq4dWU6+LV/+vi1f/r4tX/6+LV/+vi
+        1f+ciXD/ysG1////////////////////////////////////////////////////////////////////
+        ////////y8K2/5uIb//r4tX/6+LV/+vi1f/r4tX/6+LV/+zh1ZQAAAAAAAAAAOjh1E7r4tX/6+LV/+vi
+        1f/r4tX/6+LV/5yJcP/KwbX/////////////////////////////////////////////////////////
+        ///////////////////Lwrb/m4hv/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+HUTgAAAAAAAAAA2traB+vh
+        1Ovr4tX/6+LV/+vi1f/r4tX/nIlw/8rBtf//////////////////////////////////////////////
+        /////////////////////////////8vCtv+biG//6+LV/+vi1f/r4tX/6+LV/+vh1Ova2toHAAAAAAAA
+        AAAAAAAA6eHUg+vi1f/r4tX/6+LV/+vi1f+ciXD/uKyc/+Db1P/g29T/4NvU/+Db1P/g29T/4NvU/+Db
+        1P/g29T/4NvU/+Db1P/g29T/4NvU/+Db1P/g29T/ua2d/5uIb//r4tX/6+LV/+vi1f/r4tX/6+HUgwAA
+        AAAAAAAAAAAAAAAAAADv388Q6+HU6uvi1f/r4tX/6+LV/6ybhP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lz
+        WP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lzWP+Jc1j/iXNY/4lzWP+Jc1j/q5qE/+vi1f/r4tX/6+LV/+vi
+        1erv388QAAAAAAAAAAAAAAAAAAAAAAAAAADq4tRZ6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6uLUWQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADq4tWY6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+ri1ZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/vwTq4dSu6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/q4dSu/7+/BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+/
+        vwTq4tWY6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6uLVmP+/vwQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADq4tRZ6+HU6uvi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+HV6uri1FkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADv388Q6eHUg+vh1Ovr4tX/6+LV/+vi1f/r4tX/6+LV/+vi
+        1f/r4tX/6+LV/+vi1f/r4tX/6+HU6+vh1IPv388QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA2traB+jh1E7q4dWU6uHUyOrh
+        1Orq4dX76uHV++vh1Orq4dTI6uHVlOvh1E7a2toHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////AA///AAD//gAAf/gAAB/wAAAP8AAAD+AAAAfAAAADwAAAA4AA
+        AAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAcAAAAPAAAAD4AAAB/AA
+        AA/wAAAP+AAAH/4AAH//AAD//8AD//////8=
+</value>
+  </data>
 </root>
